--- a/Resources/Prototypes/_NF/Entities/Mobs/Corpses/corpses.yml
+++ b/Resources/Prototypes/_NF/Entities/Mobs/Corpses/corpses.yml
@@ -4,6 +4,7 @@
   - DungeonHumanCorpse
   - NFRandomLoadoutService
   id: DungeonHumanCorpseRandomService
+  categories: [ HideSpawnMenu ]
   suffix: Dead, Frontier, Service
 
 - type: entity
@@ -11,6 +12,7 @@
   - DungeonHumanCorpse
   - NFRandomLoadoutEngineering
   id: DungeonHumanCorpseRandomEngineer
+  categories: [ HideSpawnMenu ]
   suffix: Dead, Frontier, Engineer
 
 - type: entity
@@ -18,6 +20,7 @@
   - DungeonHumanCorpse
   - NFRandomLoadoutCargo
   id: DungeonHumanCorpseRandomCargo
+  categories: [ HideSpawnMenu ]
   suffix: Dead, Frontier, Cargo
 
 - type: entity
@@ -25,6 +28,7 @@
   - DungeonHumanCorpse
   - NFRandomLoadoutMedical
   id: DungeonHumanCorpseRandomMedic
+  categories: [ HideSpawnMenu ]
   suffix: Dead, Frontier, Medic
 
 - type: entity
@@ -32,6 +36,7 @@
   - DungeonHumanCorpse
   - NFRandomLoadoutScience
   id: DungeonHumanCorpseRandomScience
+  categories: [ HideSpawnMenu ]
   suffix: Dead, Frontier, Science
 
 - type: entity
@@ -39,6 +44,7 @@
   - DungeonHumanCorpse
   - NFRandomLoadoutSecurity
   id: DungeonHumanCorpseRandomSecurity
+  categories: [ HideSpawnMenu ]
   suffix: Dead, Frontier, Security
 
 - type: entity
@@ -46,4 +52,5 @@
   - DungeonHumanCorpse
   - NFRandomLoadoutCommand
   id: DungeonHumanCorpseRandomCommand
+  categories: [ HideSpawnMenu ]
   suffix: Dead, Frontier, Command
