--- a/Resources/Prototypes/_NF/Entities/Mobs/Corpses/loadouts.yml
+++ b/Resources/Prototypes/_NF/Entities/Mobs/Corpses/loadouts.yml
@@ -2,7 +2,7 @@
 # Corpse loadout definitions
 - type: entity
   id: NFRandomLoadoutService
-  abstract: true
+  categories: [ HideSpawnMenu ]
   components:
   - type: Loadout
     prototypes:
@@ -42,7 +42,7 @@
 
 - type: entity
   id: NFRandomLoadoutEngineering
-  abstract: true
+  categories: [ HideSpawnMenu ]
   components:
   - type: Loadout
     prototypes:
@@ -55,7 +55,7 @@
 
 - type: entity
   id: NFRandomLoadoutCargo
-  abstract: true
+  categories: [ HideSpawnMenu ]
   components:
   - type: Loadout
     prototypes:
@@ -66,7 +66,7 @@
 
 - type: entity
   id: NFRandomLoadoutMedical
-  abstract: true
+  categories: [ HideSpawnMenu ]
   components:
   - type: Loadout
     prototypes:
@@ -91,6 +91,7 @@
 
 - type: entity
   id: NFRandomLoadoutScience
+  categories: [ HideSpawnMenu ]
   components:
   - type: Loadout
     prototypes:
@@ -101,6 +102,7 @@
 
 - type: entity
   id: NFRandomLoadoutSecurity
+  categories: [ HideSpawnMenu ]
   components:
   - type: Loadout
     prototypes:
@@ -115,6 +117,7 @@
 
 - type: entity
   id: NFRandomLoadoutCommand
+  categories: [ HideSpawnMenu ]
   components:
   - type: Loadout
     prototypes:
