Add HideSpawnMenu categories to medical corpses

--- a/Resources/Prototypes/_NF/Entities/Mobs/Corpses/medical_corpse.yml
+++ b/Resources/Prototypes/_NF/Entities/Mobs/Corpses/medical_corpse.yml
@@ -3,6 +3,7 @@
   id: SpawnRandomHumanoidCorpseMedicalBounty
   name: medical bounty corpse
   suffix: No Loadout
+  categories: [ HideSpawnMenu ]
   components:
   - type: Sprite
     sprite: Markers/jobs.rsi
@@ -17,6 +18,7 @@
 - type: entity
   id: SpawnRandomHumanoidCorpseMedicalBountyService
   suffix: Service
+  categories: [ HideSpawnMenu ]
   components:
   - type: RandomHumanoidSpawner
     settings: MedicalBountyService
@@ -24,6 +26,7 @@
 - type: entity
   id: SpawnRandomHumanoidCorpseMedicalBountyMusician
   suffix: Musician
+  categories: [ HideSpawnMenu ]
   components:
   - type: RandomHumanoidSpawner
     settings: MedicalBountyMusician
@@ -31,6 +34,7 @@
 - type: entity
   id: SpawnRandomHumanoidCorpseMedicalBountyEngineering
   suffix: Engineering
+  categories: [ HideSpawnMenu ]
   components:
   - type: RandomHumanoidSpawner
     settings: MedicalBountyEngineering
@@ -38,6 +42,7 @@
 - type: entity
   id: SpawnRandomHumanoidCorpseMedicalBountyCargo
   suffix: Cargo
+  categories: [ HideSpawnMenu ]
   components:
   - type: RandomHumanoidSpawner
     settings: MedicalBountyCargo
@@ -45,6 +50,7 @@
 - type: entity
   id: SpawnRandomHumanoidCorpseMedicalBountyMedical
   suffix: Medical
+  categories: [ HideSpawnMenu ]
   components:
   - type: RandomHumanoidSpawner
     settings: MedicalBountyMedical
@@ -52,6 +58,7 @@
 - type: entity
   id: SpawnRandomHumanoidCorpseMedicalBountyScience
   suffix: Science
+  categories: [ HideSpawnMenu ]
   components:
   - type: RandomHumanoidSpawner
     settings: MedicalBountyScience
@@ -59,6 +66,7 @@
 - type: entity
   id: SpawnRandomHumanoidCorpseMedicalBountySecurity
   suffix: Security
+  categories: [ HideSpawnMenu ]
   components:
   - type: RandomHumanoidSpawner
     settings: MedicalBountySecurity
@@ -66,6 +74,7 @@
 - type: entity
   id: SpawnRandomHumanoidCorpseMedicalBountyCommand
   suffix: Command
+  categories: [ HideSpawnMenu ]
   components:
   - type: RandomHumanoidSpawner
     settings: MedicalBountyCommand
@@ -138,19 +147,8 @@
     prototypes:
     - NFVisitorMusicianFancyAltA
     - NFVisitorMusicianFancyAltB
-    - NFVisitorMusicianFancyAltC
-    - NFVisitorMusicianFancyAltD
-    - NFVisitorMusicianFancyAltE
-    - NFVisitorMusicianFancyAltF
-    - NFVisitorMusicianFancyAltG
-    - NFVisitorMusicianFancyAltH
-    - NFVisitorMusicianFancyAltI
     - NFVisitorMusicianRelaxedAltA
     - NFVisitorMusicianRelaxedAltB
-    - NFVisitorMusicianRelaxedAltC
-    - NFVisitorMusicianRelaxedAltD
-    - NFVisitorMusicianRelaxedAltE
-    - NFVisitorMusicianRelaxedAltF
     - NFVisitorMusicianMariachi
 
 - type: randomHumanoidSettings
