--- a/Resources/Maps/_NF/Outpost/frontier.yml
+++ b/Resources/Maps/_NF/Outpost/frontier.yml
@@ -3555,7 +3555,7 @@ entities:
             0: 47903
           -9,3:
             0: 34831
-            2: 8704
+            3: 8704
           -8,4:
             0: 2187
             1: 768
@@ -3695,13 +3695,13 @@ entities:
             0: 63931
           -10,3:
             0: 13087
-            3: 34816
+            2: 34816
           -10,4:
             0: 3
-            3: 8
+            2: 8
             1: 3840
           -9,4:
-            2: 2
+            3: 2
             0: 8
             1: 3840
           -16,0:
@@ -3757,7 +3757,7 @@ entities:
           12,0:
             0: 65520
           12,1:
-            0: 51635
+            0: 35251
           12,2:
             0: 3537
           12,3:
@@ -3805,16 +3805,14 @@ entities:
           0,7:
             0: 1365
           1,5:
-            0: 32767
-            4: 32768
+            0: 65535
           1,6:
             0: 65521
           1,7:
             0: 15
             1: 3840
           2,5:
-            0: 49663
-            4: 4096
+            0: 53759
           2,6:
             0: 65532
           2,7:
@@ -3929,8 +3927,8 @@ entities:
         - volume: 2500
           temperature: 293.15
           moles:
-          - 6666.982
           - 0
+          - 6666.982
           - 0
           - 0
           - 0
@@ -3944,23 +3942,8 @@ entities:
         - volume: 2500
           temperature: 293.15
           moles:
-          - 0
           - 6666.982
           - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-        - volume: 2500
-          temperature: 293.14996
-          moles:
-          - 20.078888
-          - 75.53487
           - 0
           - 0
           - 0
@@ -5651,11 +5634,6 @@ entities:
     components:
     - type: Transform
       pos: -50.5,8.5
-      parent: 2173
-  - uid: 2445
-    components:
-    - type: Transform
-      pos: -45.5,11.5
       parent: 2173
 - proto: BannerSecurity
   entities:
@@ -27878,6 +27856,13 @@ entities:
     - type: Transform
       pos: -54.5,18.5
       parent: 2173
+- proto: MachineMedicalBountyRedemption
+  entities:
+  - uid: 2132
+    components:
+    - type: Transform
+      pos: -45.5,11.5
+      parent: 2173
 - proto: MailBag
   entities:
   - uid: 805
@@ -31606,6 +31591,20 @@ entities:
     - type: Transform
       pos: 32.5,18.5
       parent: 2173
+    - type: ContainerContainer
+      containers:
+        machine_board: !type:Container
+          showEnts: False
+          occludes: True
+          ents: []
+        machine_parts: !type:Container
+          showEnts: False
+          occludes: True
+          ents: []
+        blueprint: !type:Container
+          showEnts: False
+          occludes: True
+          ents: []
 - proto: SignAtmos
   entities:
   - uid: 785
