--- a/Resources/Prototypes/_NF/Entities/Structures/Machines/cryopod.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Machines/cryopod.yml
@@ -32,23 +32,28 @@
 
 # WIP for a medical bounty reclaimer machine
 - type: entity
-  parent: [BaseStructureDisableToolUse, BaseStructureIndestructible, BaseMachine]
+  parent: [BaseStructureDisableToolUse, BaseStructureIndestructible, BaseMachinePowered]
   id: MachineMedicalBountyRedemption
   name: body retrieval unit
   description: A teleporter to return lost bodies with bounties on them. Dispenses cash on teleport.
   components:
   - type: Sprite
     noRot: true
-    sprite: Structures/cryostorage.rsi # TODO: sprites
+    sprite: _NF/Structures/Machines/body_retrieval_unit.rsi
     layers:
-    - state: sleeper_0
+    - state: closed
       map: ["base"]
+    - state: left_on_unlit
+      shader: unshaded
+      map: ["lights"]
+      visible: false
   - type: UserInterface
     interfaces:
       enum.MedicalBountyRedemptionUiKey.Key:
         type: MedicalBountyRedemptionBoundUserInterface
   - type: ActivatableUI
     key: enum.MedicalBountyRedemptionUiKey.Key
+  - type: ActivatableUIRequiresPower
   - type: InteractionOutline
   - type: Physics
     bodyType: Static
@@ -62,7 +67,7 @@
         mask:
         - MachineMask
         layer:
-        - MobLayer # To allow people to pass through
+        - MachineLayer
   - type: DragInsertContainer
     containerId: body_container
   - type: ExitContainerOnMove
@@ -72,10 +77,20 @@
       body_container: !type:ContainerSlot
   - type: MedicalBountyRedemption
     bodyContainer: body_container
-  # - type: Appearance # TODO: implement with client-side code (UI, visualizer)
-  # - type: GenericVisualizer
-  #   visuals:
-  #     enum.MedicalBountyVisuals.Full:
-  #       base:
-  #         True: { state: sleeper_1 }
-  #         False: { state: sleeper_0 }
+  - type: Appearance
+  - type: GenericVisualizer
+    visuals:
+      enum.MedicalBountyRedemptionVisuals.Full:
+        base:
+          True: { state: closed_full }
+          False: { state: closed }
+        lights:
+          True: { state: both_on_unlit }
+          False: { state: left_on_unlit }
+      enum.PowerDeviceVisuals.Powered:
+        lights:
+          True: { visible: true }
+          False: { visible: false }
+  - type: ApcPowerReceiver
+    powerLoad: 1000 # Keeping this explicit
+  - type: Climbable
