--- a/Resources/Prototypes/_NF/Entities/Mobs/NPCs/mob_meme_goblinbane_minions.yml
+++ b/Resources/Prototypes/_NF/Entities/Mobs/NPCs/mob_meme_goblinbane_minions.yml
@@ -194,7 +194,7 @@
           MopBucket:
             min: 1
             max: 1
-          SoapNT:
+          RandomSoap:
             min: 1
             max: 1
       - !type:DoActsBehavior
