--- a/Resources/Prototypes/_NF/Entities/Mobs/NPCs/mob_meme_goblinbane_minions.yml
+++ b/Resources/Prototypes/_NF/Entities/Mobs/NPCs/mob_meme_goblinbane_minions.yml
@@ -2,7 +2,7 @@
 - type: entity
   id: MobMemePossessedMop
   name: possessed mop
-  parent: [ MobIncorporealBase, BaseMobMemeGoblinbane, NFMobTimedDespawn120 ]
+  parent: [ BaseMobMemeGoblinbane, NFMobTimedDespawn120 ]
   categories: [ HideSpawnMenu ]
   components:
   - type: HTN
@@ -38,7 +38,7 @@
   - type: MobThresholds
     thresholds:
       0: Alive
-      50: Dead
+      40: Dead
   - type: Destructible
     thresholds:
     - trigger:
@@ -109,7 +109,7 @@
   - type: MobThresholds
     thresholds:
       0: Alive
-      50: Dead
+      40: Dead
   - type: Destructible
     thresholds:
     - trigger:
@@ -179,7 +179,7 @@
   - type: MobThresholds
     thresholds:
       0: Alive
-      50: Dead
+      40: Dead
   - type: Destructible
     thresholds:
     - trigger:
@@ -237,7 +237,7 @@
     thresholds:
     - trigger:
         !type:DamageTrigger
-        damage: 90
+        damage: 60
       behaviors:
       - !type:PlaySoundBehavior
         sound:
@@ -246,7 +246,7 @@
         acts: [ "Destruction" ]
     - trigger:
         !type:DamageTrigger
-        damage: 90
+        damage: 60
       behaviors:
       - !type:DoActsBehavior
         acts: ["Destruction"]
