--- a/Resources/Maps/_NF/Shuttles/caduceus.yml
+++ b/Resources/Maps/_NF/Shuttles/caduceus.yml
@@ -4016,6 +4016,16 @@ entities:
       rot: 3.141592653589793 rad
       pos: 2.5,1.5
       parent: 1
+  - uid: 1119
+    components:
+    - type: Transform
+      pos: 2.5,2.5
+      parent: 1
+  - uid: 1120
+    components:
+    - type: Transform
+      pos: 2.5,-1.5
+      parent: 1
 - proto: CyborgEndoskeleton
   entities:
   - uid: 1446
