--- a/Resources/Maps/_NF/Shuttles/eagle.yml
+++ b/Resources/Maps/_NF/Shuttles/eagle.yml
@@ -2061,11 +2061,6 @@ entities:
       rot: 3.141592653589793 rad
       pos: -1.5,8.5
       parent: 1
-  - uid: 718
-    components:
-    - type: Transform
-      pos: 10.5,-2.5
-      parent: 1
 - proto: ChairPilotSeat
   entities:
   - uid: 226
@@ -2191,7 +2186,7 @@ entities:
       parent: 1
 - proto: ComputerWallmountWithdrawBankATM
   entities:
-  - uid: 181
+  - uid: 447
     components:
     - type: Transform
       pos: 1.5,2.5
@@ -3672,7 +3667,7 @@ entities:
       parent: 1
 - proto: LockerWallMaterialsFuelUraniumFilled2
   entities:
-  - uid: 11
+  - uid: 73
     components:
     - type: Transform
       rot: -1.5707963267948966 rad
@@ -3760,10 +3755,10 @@ entities:
           ents: []
 - proto: MedkitFilled
   entities:
-  - uid: 701
+  - uid: 145
     components:
     - type: Transform
-      pos: 10.5,-3.5
+      pos: 10.50416,-2.3501134
       parent: 1
 - proto: Morgue
   entities:
@@ -3987,12 +3982,6 @@ entities:
       rot: 3.141592653589793 rad
       pos: 1.5,7.5
       parent: 1
-  - uid: 145
-    components:
-    - type: Transform
-      rot: -1.5707963267948966 rad
-      pos: 1.5,-1.5
-      parent: 1
   - uid: 211
     components:
     - type: Transform
@@ -4010,6 +3999,12 @@ entities:
     - type: Transform
       rot: 1.5707963267948966 rad
       pos: 7.5,1.5
+      parent: 1
+  - uid: 445
+    components:
+    - type: Transform
+      rot: -1.5707963267948966 rad
+      pos: 1.5,-1.5
       parent: 1
   - uid: 524
     components:
@@ -4530,7 +4525,7 @@ entities:
       parent: 1
 - proto: SinkWide
   entities:
-  - uid: 73
+  - uid: 181
     components:
     - type: Transform
       rot: 1.5707963267948966 rad
@@ -4609,6 +4604,12 @@ entities:
       parent: 1
 - proto: TableReinforcedGlass
   entities:
+  - uid: 11
+    components:
+    - type: Transform
+      rot: -1.5707963267948966 rad
+      pos: 10.5,-2.5
+      parent: 1
   - uid: 439
     components:
     - type: Transform
@@ -4628,12 +4629,6 @@ entities:
     components:
     - type: Transform
       pos: 2.5,3.5
-      parent: 1
-  - uid: 667
-    components:
-    - type: Transform
-      rot: 1.5707963267948966 rad
-      pos: 10.5,-3.5
       parent: 1
   - uid: 675
     components:
@@ -4754,6 +4749,13 @@ entities:
     components:
     - type: Transform
       pos: 11.5,0.5
+      parent: 1
+- proto: VendingMachineMediDrobe
+  entities:
+  - uid: 448
+    components:
+    - type: Transform
+      pos: 10.5,-3.5
       parent: 1
 - proto: WallShuttle
   entities:
