Fix CardHandParent ID/parent

--- a/Resources/Prototypes/EstacaoPirata/Entities/Objects/Misc/cards.yml
+++ b/Resources/Prototypes/EstacaoPirata/Entities/Objects/Misc/cards.yml
@@ -47,8 +47,8 @@
 # End Frontier
 
 - type: entity
-  parent: BaseItem
-  id: CardStackBase
+  parent: CardStackBase
+  id: CardHandBase
   categories: [ HideSpawnMenu ]
   name: hand of cards
   components:
