--- a/Resources/Prototypes/_NF/Entities/Structures/Machines/microwave_recipe_assemblers.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Machines/microwave_recipe_assemblers.yml
@@ -330,3 +330,13 @@
   components:
   - type: Machine
     board: Null
+
+- type: entity
+  id: KitchenDeepFryerCauldronPOI
+  parent:
+  - BaseStructureDisableToolUse
+  - KitchenDeepFryerCauldron
+  suffix: Holiday Special, POI
+  components:
+  - type: Machine
+    board: null
