--- a/Resources/Prototypes/_NF/Shipyard/Expedition/decadedove.yml
+++ b/Resources/Prototypes/_NF/Shipyard/Expedition/decadedove.yml
@@ -1,3 +1,5 @@
+  engine:
+  - AME
 # Author Info
 # GitHub: crystalHex (https://github.com/crystalHex)
 # Discord: ???
@@ -19,6 +21,8 @@
   guidebookPage: Null
   class:
   - Expedition
+  engine:
+  - AME
 
 - type: gameMap
   id: DecadeDove
