--- a/Resources/Prototypes/_NF/Entities/Effects/emp.yml
+++ b/Resources/Prototypes/_NF/Entities/Effects/emp.yml
@@ -5,8 +5,8 @@
   categories: [ HideSpawnMenu ]
   components:
   - type: EmpBlast
-#  - type: TimedDespawn
-#    lifetime: 1
+  - type: TimedDespawn
+    lifetime: 1
   - type: Tag
     tags:
       - HideContextMenu
