Make item fixture soft by default for folding tbl

--- a/Resources/Prototypes/_NF/Entities/Structures/Furniture/tables.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Furniture/tables.yml
@@ -44,6 +44,7 @@
         - ItemMask
         restitution: 0.3  # fite me
         friction: 0.2
+        hard: false
   - type: Bonkable
     bonkDamage:
       types:
