Remove station anchor, salv magnet board recipes

--- a/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
@@ -503,8 +503,8 @@
     - SodaDispenserMachineCircuitboard
     - SpaceHeaterMachineCircuitBoard
     - CutterMachineCircuitboard
-    - StationAnchorCircuitboard
-    - SalvageMagnetMachineCircuitboard
+    # - StationAnchorCircuitboard # Frontier
+    # - SalvageMagnetMachineCircuitboard # Frontier
     - SalvageTechFabCircuitboardNF # Frontier
     - BlueprintLithographMachineCircuitboard # Frontier
     dynamicRecipes:
@@ -1208,7 +1208,7 @@
       - ClothingOuterWinterSci
       - ClothingOuterWinterRobo
 #      - ClothingOuterWinterSec # Frontier
-      - ClothingOuterWinterCoatMail
+      - ClothingOuterWinterCoatMail # Frontier
       # Ties
       - ClothingNeckTieRed
       - ClothingNeckTieDet
