Remove salvage magnet board recipes (#2272)
* Remove station anchor, salv magnet board recipes

* Restore station anchor

--- a/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
@@ -504,7 +504,7 @@
     - SpaceHeaterMachineCircuitBoard
     - CutterMachineCircuitboard
     - StationAnchorCircuitboard
-    - SalvageMagnetMachineCircuitboard
+    # - SalvageMagnetMachineCircuitboard # Frontier
     - SalvageTechFabCircuitboardNF # Frontier
     - BlueprintLithographMachineCircuitboard # Frontier
     dynamicRecipes:
@@ -1208,7 +1208,7 @@
       - ClothingOuterWinterSci
       - ClothingOuterWinterRobo
 #      - ClothingOuterWinterSec # Frontier
-      - ClothingOuterWinterCoatMail
+      - ClothingOuterWinterCoatMail # Frontier
       # Ties
       - ClothingNeckTieRed
       - ClothingNeckTieDet
