--- a/Resources/Prototypes/_NF/Entities/Mobs/NPCs/mob_hostile_base.yml
+++ b/Resources/Prototypes/_NF/Entities/Mobs/NPCs/mob_hostile_base.yml
@@ -196,7 +196,7 @@
   - type: FTLKnockdownImmune
 
 # Inventories
-- type: entity
+- type: entity # All slots are fillable, most of them are "hidden"
   save: false
   id: MobHumanoidInvetory
   abstract: true
@@ -210,7 +210,7 @@
       enum.StrippingUiKey.Key:
         type: StrippableBoundUserInterface
 
-- type: entity
+- type: entity # Slots for loot containers: pockets, belt, back
   save: false
   id: MobHumanoidInvetorySimplified
   abstract: true
