--- a/Resources/Prototypes/_NF/Entities/Mobs/NPCs/mob_hostile_expeditions_explorers.yml
+++ b/Resources/Prototypes/_NF/Entities/Mobs/NPCs/mob_hostile_expeditions_explorers.yml
@@ -5,7 +5,6 @@
   parent:
   - MobNonHumanHostileBase
   - MobHumanoidInvetory
-  - MobHumanoidHostileAISimpleRanged
   - NFMobRestrictions
   id: MobExplorerBase
   components:
@@ -44,7 +43,7 @@
     angle: 0
     damage:
       types:
-        Slash: 15
+        Slash: 10
         Structural: 30
     soundHit:
       collection: MetalThud
@@ -79,14 +78,27 @@
   - type: Sprite
     drawdepth: Mobs
     layers:
+    # Body
     - sprite: _NF/Mobs/Species/Templates/human.rsi
       state: human
+    # Jumpsuit
     - sprite: Clothing/Uniforms/Jumpsuit/salvage.rsi
       state: equipped-INNERCLOTHING
+    # Mask
     - sprite: Clothing/Mask/gasexplorer.rsi
       state: equipped-MASK
+    # Helmet
     - sprite: _NF/Clothing/Head/Hats/pilot.rsi
       state: equipped-HELMET
+    # Suit
+    # Hands
+    - sprite: Clothing/Hands/Gloves/Color/color.rsi
+      state: equipped-HAND
+      color: "#535353"
+    # Weapons
+    - sprite: Objects/Weapons/Melee/pickaxe.rsi
+      state: wielded-inhand-right
+    # Fluff
     - sprite: Objects/Tools/lantern.rsi
       state: on-equipped-BELT
       shader: unshaded
@@ -97,8 +109,8 @@
     angle: 0
     damage:
       types:
-        Blunt: 7.5
-        Piercing: 7.5
+        Blunt: 6
+        Piercing: 6
         Structural: 30
     soundHit:
       collection: MetalThud
@@ -107,32 +119,54 @@
   name: scrapper
   parent:
   - MobExplorerBase
+  - MobHumanoidHostileAISimpleRanged
   id: MobExplorerRangedT1
   description: Proto-kinetic accelerator in one hand, flashlight in the other, beer in the belly. That's how you explore.
   categories: [ HideSpawnMenu ]
   components:
+  - type: MovementSpeedModifier
+    baseWalkSpeed : 4
+    baseSprintSpeed : 4
   - type: Loadout
     prototypes:
     - MobHumanoidExplorerGearRangedT1
   - type: Sprite
     drawdepth: Mobs
     layers:
+    # Body
     - sprite: _NF/Mobs/Species/Templates/human.rsi
       state: human
+    # Jumpsuit
     - sprite: Clothing/Uniforms/Jumpsuit/salvage.rsi
       state: equipped-INNERCLOTHING
-    - sprite: Clothing/OuterClothing/WinterCoats/coat.rsi
-      state: MINER-equipped-OUTERCLOTHING
+    # Mask
     - sprite: Clothing/Mask/gasexplorer.rsi
       state: equipped-MASK
+    # Helmet
     - sprite: Clothing/Head/Hoods/Coat/hoodminer.rsi
       state: equipped-HELMET
+    # Suit
+    - sprite: Clothing/OuterClothing/WinterCoats/coat.rsi
+      state: MINER-equipped-OUTERCLOTHING
+    # Hands
+    - sprite: Clothing/Hands/Gloves/Color/color.rsi
+      state: equipped-HAND
+      color: "#535353"
+    # Weapons
+    - sprite: Objects/Weapons/Guns/Basic/kinetic_accelerator.rsi
+      state: inhand-right
+    # Fluff
+    - sprite: Objects/Tools/flashlight.rsi
+      state: inhand-left
+    - sprite: Objects/Tools/flashlight.rsi
+      state: inhand-left-light
+      shader: unshaded
   - type: RechargeBasicEntityAmmo
-    rechargeCooldown: 0.75
+    rechargeCooldown: 1
     rechargeSound:
       path: /Audio/Weapons/Guns/MagIn/kinetic_reload.ogg
   - type: BasicEntityAmmoProvider
-    proto: BulletKinetic
+    proto: BulletKineticLowPower
     capacity: 1
     count: 1
   - type: Gun
@@ -167,12 +201,14 @@
     prototypes:
     - MobHumanoidExplorerGearMeleeT2
   - type: Damageable
-    damageModifierSet: MobHostileDamageModifierSetLow
+    damageModifierSet: MobHostileDamageModifierSetMedium
   - type: Sprite
     drawdepth: Mobs
     layers:
-    - sprite: _NF/Mobs/Species/Templates/human.rsi
-      state: human
+    # Body
+    # Jumpsuit
+    # Mask
+    # Helmet
     - sprite: Clothing/Head/Hardsuits/spatiohelm.rsi
       state: equipped-head
     - sprite: Clothing/Head/Hardsuits/spatiohelm.rsi
@@ -182,6 +218,14 @@
       state: equipped-head-light
       shader: unshaded
       color: "#47f8ff"
+    # Suit
+    - sprite: Clothing/OuterClothing/Hardsuits/spatio.rsi
+      state: equipped-OUTERCLOTHING
+    # Hands
+    # Weapons
+    - sprite: Objects/Weapons/Melee/crusher_glaive.rsi
+      state: wielded-inhand-right
+    # Fluff
   - type: PointLight
     enabled: true
     autoRot: true
@@ -191,14 +235,14 @@
     mask: /Textures/Effects/LightMasks/cone.png
     color: "#47f8ff"
   - type: MeleeWeapon
-    attackRate: 1.0
+    attackRate: 1.5
     altDisarm: false
     animation: WeaponArcPunch
     angle: 0
     damage:
       types:
-        Blunt: 7.5
-        Slash: 5.5
+        Blunt: 7
+        Slash: 6
         Structural: 30
     soundHit:
       collection: MetalThud
@@ -207,20 +251,26 @@
   name: salvager
   parent:
   - MobExplorerBase
+  - MobHumanoidHostileAISimpleRanged
   id: MobExplorerRangedT2
   description: Sawn-off proto-kinetic accelerator in one hand, crusher dagger in the other, magm-ale both in the belly and in the hardsuit's boots.
   categories: [ HideSpawnMenu ]
   components:
+  - type: MovementSpeedModifier
+    baseWalkSpeed : 4
+    baseSprintSpeed : 4
   - type: Loadout
     prototypes:
     - MobHumanoidExplorerGearRangedT2
   - type: Damageable
-    damageModifierSet: MobHostileDamageModifierSetLow
+    damageModifierSet: MobHostileDamageModifierSetMedium
   - type: Sprite
     drawdepth: Mobs
     layers:
-    - sprite: _NF/Mobs/Species/Templates/human.rsi
-      state: human
+    # Body
+    # Jumpsuit
+    # Mask
+    # Helmet
     - sprite: Clothing/Head/Hardsuits/spatiohelm.rsi
       state: equipped-head
     - sprite: Clothing/Head/Hardsuits/spatiohelm.rsi
@@ -230,17 +280,27 @@
       state: equipped-head-light
       shader: unshaded
       color: "#47f8ff"
+    # Suit
+    - sprite: Clothing/OuterClothing/Hardsuits/spatio.rsi
+      state: equipped-OUTERCLOTHING
+    # Hands
+    # Weapons
+    - sprite: _NF/Objects/Weapons/Guns/Basic/sawn_kinetic_accelerator.rsi
+      state: inhand-right
+    - sprite: Objects/Weapons/Melee/crusher_dagger.rsi
+      state: inhand-left
+    # Fluff
   - type: RechargeBasicEntityAmmo
-    rechargeCooldown: 0.75
+    rechargeCooldown: 1
     rechargeSound:
       path: /Audio/Weapons/Guns/MagIn/kinetic_reload.ogg
   - type: BasicEntityAmmoProvider
-    proto: BulletKinetic
+    proto: BulletKineticLowPower
     capacity: 1
     count: 1
   - type: Gun
     showExamineText: false
-    fireRate: 6
+    fireRate: 0.75
     selectedMode: FullAuto
     minAngle: 31
     maxAngle: 45
@@ -270,18 +330,33 @@
     prototypes:
     - MobHumanoidExplorerGearMeleeT3
   - type: Damageable
-    damageModifierSet: MobHostileDamageModifierSetMedium
+    damageModifierSet: MobHostileDamageModifierSetHigh
   - type: Sprite
     drawdepth: Mobs
     layers:
-    - sprite: _NF/Mobs/Species/Templates/human.rsi
-      state: human
-    - sprite: Clothing/Head/Hardsuits/salvage.rsi
-      state: off-equipped-HELMET
+    # Body
+    # Jumpsuit
+    # Mask
+    # Helmet
+    - sprite: Clothing\Head\Hardsuits\salvage.rsi
+      state: on-equipped-HELMET
     - sprite: Clothing/Head/Hardsuits/spatiohelm.rsi
       state: equipped-head-light
       shader: unshaded
       color: "#47f8ff"
+    # Suit
+    - sprite: Clothing/OuterClothing/Hardsuits/salvage.rsi
+      state: equipped-OUTERCLOTHING
+    # Hands
+    # Weapons
+    - sprite: Objects/Tools/handdrill.rsi
+      state: inhand-right
+    - sprite: Objects/Tools/handdrill.rsi
+      state: inhand-left
+    # Fluff
+    - sprite: Objects/Tools/lantern.rsi
+      state: on-equipped-BELT
+      shader: unshaded
   - type: MeleeWeapon
     autoAttack: true
     angle: 0
@@ -292,7 +367,7 @@
     damage:
       types:
         Blunt: 2
-        Slash: 1
+        Slash: 2
         Piercing: 2
         Structural: 25
   - type: PointLight
@@ -308,37 +383,54 @@
   name: explorer
   parent:
   - MobExplorerBase
+  - MobHumanoidHostileAISimpleRanged
   id: MobExplorerRangedT3
   description: Veteran scrappers, these salvagers are wealthy enough to explore abandoned ruins for the adrenaline rush and adventure alone.
   categories: [ HideSpawnMenu ]
   components:
+  - type: MovementSpeedModifier
+    baseWalkSpeed : 4
+    baseSprintSpeed : 4
   - type: Loadout
     prototypes:
     - MobHumanoidExplorerGearRangedT3
   - type: Damageable
-    damageModifierSet: MobHostileDamageModifierSetMedium
+    damageModifierSet: MobHostileDamageModifierSetHigh
   - type: Sprite
     drawdepth: Mobs
     layers:
-    - sprite: _NF/Mobs/Species/Templates/human.rsi
-      state: human
+    # Body
+    # Jumpsuit
+    # Mask
+    # Helmet
     - sprite: Clothing/Head/Hardsuits/luxury.rsi
       state: off-equipped-HELMET
     - sprite: Clothing/Head/Hardsuits/spatiohelm.rsi
       state: equipped-head-light
       shader: unshaded
       color: "#47f8ff"
+    # Suit
+    - sprite: Clothing\OuterClothing\Hardsuits\luxury.rsi
+      state: equipped-OUTERCLOTHING
+    # Hands
+    # Weapons
+    - sprite: Objects/Weapons/Guns/Basic/kinetic_accelerator.rsi
+      state: wielded-inhand-right
+    # Fluff
+    - sprite: Objects/Tools/lantern.rsi
+      state: on-equipped-BELT
+      shader: unshaded
   - type: RechargeBasicEntityAmmo
-    rechargeCooldown: 0.75
+    rechargeCooldown: 1
     rechargeSound:
       path: /Audio/Weapons/Guns/MagIn/kinetic_reload.ogg
   - type: BasicEntityAmmoProvider
-    proto: BulletKinetic
+    proto: BulletKineticMediumPower
     capacity: 1
     count: 1
   - type: Gun
     showExamineText: false
-    fireRate: 0.5
+    fireRate: 0.75
     minAngle: 1
     maxAngle: 5
     selectedMode: SemiAuto
@@ -359,7 +451,7 @@
   categories: [ HideSpawnMenu ]
   parent:
   - MobExplorerBase
-  - MobLaserReflect # Added to prevent laser abuse from players
+  - MobHumanoidHostileAISimpleMelee
   id: MobExplorerHauler
   description: |- 
    Loaded with heavy equipment for industrial-scale looting. Pardon me, "asset recovery".
@@ -396,9 +488,31 @@
       160: 0.5
   - type: Stamina
     critThreshold: 600
-  - type: MovementSpeedModifier
-    baseWalkSpeed: 2.75
-    baseSprintSpeed: 4
+  - type: Destructible
+    thresholds:
+    - trigger:
+        !type:DamageTrigger
+        damage: 195
+      behaviors:
+      - !type:PlaySoundBehavior
+        sound:
+          collection: GlassBreak
+      - !type:SpawnEntitiesBehavior
+        spawn:
+          SpawnMobExplorerT2:
+            min: 1
+            max: 1
+          RipleyChassis:
+            min: 1
+            max: 1
+          RipleyCentralElectronics:
+            min: 1
+            max: 1
+          RipleyPeripheralsElectronics:
+            min: 1
+            max: 1
+      - !type:DoActsBehavior
+        acts: [ "Destruction" ]
   - type: FootstepModifier
     footstepSoundCollection:
       path: /Audio/Mecha/sound_mecha_powerloader_step.ogg
@@ -410,7 +524,7 @@
     attackRate: 1
     damage:
       types:
-        Blunt: 15
+        Blunt: 20
         Structural: 20
     soundHit:
       collection: MetalThud
@@ -427,6 +541,7 @@
 - type: entity
   name: explorer captain
   parent:
+  - MobHostileBossBase
   - MobExplorerBase
   - MobHumanoidHostileAISimpleMelee
   id: MobExplorerBoss
@@ -439,18 +554,35 @@
     prototypes:
     - MobHumanoidExplorerGearBoss
   - type: Damageable
-    damageModifierSet: MobHostileDamageModifierSetHigh
+    damageModifierSet: MobHostileDamageModifierSetBoss
   - type: Sprite
     drawdepth: Mobs
     layers:
-    - sprite: _NF/Mobs/Species/Templates/human.rsi
-      state: human
+    # Body
+    # Jumpsuit
+    # Mask
+    # Helmet
     - sprite: _NF/Clothing/Head/Hardsuits/maxim_prototype.rsi
       state: off-equipped-HELMET
     - sprite: Clothing/Head/Hardsuits/spatiohelm.rsi
       state: equipped-head-light
       shader: unshaded
       color: "#47f8ff"
+    # Suit
+    - sprite: _NF\Clothing\OuterClothing\Hardsuits\maxim_prototype.rsi
+      state: equipped-OUTERCLOTHING
+    # Hands
+    # Weapons
+    - sprite: _NF/Objects/Weapons/Melee/energy_pickaxe.rsi
+      state: inhand-left
+    - sprite: _NF/Objects/Weapons/Melee/energy_pickaxe.rsi
+      state: inhand-left-blade
+      shader: unshaded
+      color: "#e95151"
+    # Fluff
+    - sprite: Objects/Tools/lantern.rsi
+      state: on-equipped-BELT
+      shader: unshaded
   - type: PointLight
     enabled: true
     autoRot: true
@@ -467,16 +599,13 @@
     speedModifierThresholds:
       60: 0.7
       80: 0.5
-  - type: MovementSpeedModifier
-    baseWalkSpeed: 4
-    baseSprintSpeed: 5.25
   - type: MeleeWeapon
     hidden: true
-    attackRate: 0.8
+    attackRate: 2
     damage:
       types:
-        Heat: 12.5
-        Piercing: 2.5
+        Heat: 16
+        Piercing: 4
         Structural: 40
     soundHit:
       path: /Audio/Weapons/eblade1.ogg
