--- a/Resources/Maps/_NF/Shuttles/Nfsd/templar.yml
+++ b/Resources/Maps/_NF/Shuttles/Nfsd/templar.yml
@@ -913,19 +913,19 @@ entities:
       rot: -1.5707963267948966 rad
       pos: 2.5,5.5
       parent: 1
+- proto: LockerNfsdCopper
+  entities:
+  - uid: 119
+    components:
+    - type: Transform
+      pos: 1.5,3.5
+      parent: 1
 - proto: LockerNfsdEvidence
   entities:
   - uid: 93
     components:
     - type: Transform
       pos: 2.5,-0.5
-      parent: 1
-- proto: LockerNfsdSilverDetectiveFilled
-  entities:
-  - uid: 119
-    components:
-    - type: Transform
-      pos: 1.5,3.5
       parent: 1
 - proto: NitrogenCanister
   entities:
