--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -47,7 +47,7 @@
             "name": "Server/Client",
             "configurations": [
                 "Server",
-                "Client"
+                "Client (Compatibility renderer)"
             ],
             "preLaunchTask": "build"
         },
@@ -56,7 +56,7 @@
             "name": "Server/Client (Release)",
             "configurations": [
                 "Server",
-                "Client"
+                "Client (Compatibility renderer)"
             ],
             "preLaunchTask": "build-release"
         }
