Replace ship gun

--- a/Resources/Maps/_NF/Shuttles/Nfsd/rogue.yml
+++ b/Resources/Maps/_NF/Shuttles/Nfsd/rogue.yml
@@ -722,7 +722,7 @@ entities:
       rot: 1.5707963267948966 rad
       pos: 0.5,3.5
       parent: 1
-- proto: ShuttleGunFriendship
+- proto: ShuttleGunFriendshipNfsd
   entities:
   - uid: 54
     components:
